Implementing new file persisting model which relies on XML files.